--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
     "@ionic/cli-plugin-ionic-angular": "1.4.0",
+    "eslint": "^4.3.0",
     "ionic": "3.6.0",
     "typescript": "2.3.4"
   },
