--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
+        "@agm/core": "^1.0.0-beta.0",
         "@angular/common": "4.1.3",
         "@angular/compiler": "4.1.3",
         "@angular/compiler-cli": "4.1.3",
@@ -20,8 +21,10 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/barcode-scanner": "^4.1.0",
         "@ionic-native/camera": "^4.1.0",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/geolocation": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
@@ -31,12 +34,14 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "phonegap-plugin-barcodescanner": "^6.0.8",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
@@ -58,7 +63,9 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-geolocation": {},
+            "phonegap-plugin-barcodescanner": {}
         }
     }
 }
